# ir-torch

./: CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
docs/: index.md  modules.md
examples/listwise/: data_prep.py  eval.py  train.py
src/ir_torch/: __init__.py
src/ir_torch/data/: __init__.py  collator.py  dataset.py  types.py
src/ir_torch/nn/: __init__.py
src/ir_torch/nn/loss/: __init__.py  multitask.py  utils.py
src/ir_torch/nn/loss/listwise/: __init__.py  approx_rank_mse.py  kl_divergence.py  lambda_rank.py  listnet.py  rcr.py
src/ir_torch/nn/loss/pairwise/: __init__.py  mse_margin.py  ranknet.py
src/ir_torch/nn/loss/pointwise/: __init__.py  bce.py  kl_divergence.py  mse.py
tests/: test_foo.py
tests/data/: test_data.py
tests/nn/loss/listwise/: test_listwise.py
tests/nn/loss/pairwise/: test_pairwise.py
tests/nn/loss/pointwise/: test_pointwise.py
